force-app/main/default/objects/AI_Insight__c/AI_Insight__c.object-meta.xml
<CustomObject>
    <label>AI Insight</label>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>AI Insight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Insights</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>