force-app/main/default/objects/AI_Insight__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>Confidence score returned for the AI insight.</description>
    <label>Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>