force-app/main/default/objects/AI_Insight__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <label>Feature Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Notifications</fullName>
            </value>
            <value>
                <fullName>Content Hub</fullName>
            </value>
            <value>
                <fullName>Leaderboards</fullName>
            </value>
            <value>
                <fullName>Webhooks</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>