force-app/main/default/objects/AI_Insight__c/fields/Insight_Text__c.field-meta.xml
<CustomField>
    <fullName>Insight_Text__c</fullName>
    <description>Generated AI insight text.</description>
    <label>Insight Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>