force-app/main/default/objects/AI_Insight__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner account associated with the AI insight.</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AI_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>