force-app/main/default/objects/AI_Insight__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>AI provider that generated the insight.</description>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OpenAI</fullName>
            </value>
            <value>
                <fullName>Azure OpenAI</fullName>
            </value>
            <value>
                <fullName>Einstein</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>