force-app/main/default/objects/AI_Insight__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>Recommended action generated from the AI insight.</description>
    <label>Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>