force-app/main/default/objects/AI_Insight__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the AI insight.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>